# ComfyUI-Unique3D

./: .gitignore  README.md  __init__.py  install_windows_portable_win_py311_cu121.bat  pyproject.toml  requirements.txt  requirements_post_win_py311_cu121.txt  run.py
app/: all_models.py  gradio_3dgen.py
app/custom_models/: image2mvimage.yaml  mvimg_prediction.py  normal_prediction.py  utils.py
custum_3d_diffusion/trainings/: base.py
mesh_reconstruction/: recon.py  refine.py  render.py
scripts/: multiview_inference.py  refine_lr_to_sr.py  sd_model_zoo.py  utils.py
workflow/: example-workflow1.json  example-workflow2.json
